<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackgroundYellow">

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Subject_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_subject_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/add">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>