...
        <TextView
                app:layout_constraintStart_toStartOf="@id/nav_Name"
                app:layout_constraintTop_toBottomOf="@id/nav_Name"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nav_Email"
                android:textSize="15sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

